--- a/To-Do List.html
+++ b/To-Do List.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-Do List</title>
+    <link rel="stylesheet" href="To-Do List.css">
 </head>
 <body>
     <div class="container">
@@ -13,5 +14,6 @@
         <ul id="taskList"></ul>
     </div>
 
+    <script src="To-Do List.js"></script>
 </body>
 </html>
