Complted task view added

--- a/To-Do List.html
+++ b/To-Do List.html
@@ -12,6 +12,8 @@
         <input type="text" id="taskInput" placeholder="Enter task...">
         <button onclick="addTask()">Add Task</button>
         <ul id="taskList"></ul>
+        <h2>Completed Tasks</h2>
+        <ul id="completedTaskList"></ul>
     </div>
 
     <script src="To-Do List.js"></script>
